preventing over stretching on mobile

--- a/src/app/component/Header.module.css
+++ b/src/app/component/Header.module.css
@@ -89,13 +89,11 @@
  .navContainer {
   position: relative;
   flex-direction: column;
-  min-width: 100vw;
+  min-width: 100%;
   margin: 0;
  }
-
  .header {
-  min-height: 10vh;
-  order: 1;
+  display: none;
  }
  .headerTitle{
   text-align: center;
